--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -1,3 +1,4 @@
+@import url('../fontes/fontes.css');
 .azul-claro {
     color: #bbd6e5;
 }
@@ -16,4 +17,20 @@
 
 .cinza-medio {
     color: #e5e5e5;
+}
+
+.roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
+.mulish {
+    font-family: 'Mulish', sans-serif;
+}
+
+.josefin {
+    font-family: 'Josefin Slab', serif;
+}
+
+.baloo {
+    font-family: 'Baloo Da 2', cursive;
 }
