--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -1,4 +1,105 @@
-@import url('../fontes/fontes.css');
+@import url('fonts.css');
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(34, 34, 90, 0.7);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+    animation: zoom 25s;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1 {
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: 'Baloo Da 2', serif;
+    font-weight: 200;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+    line-height: 3.5rem;
+    margin-bottom: 1.5rem;
+    opacity: 0;
+    animation: move_banner 1s 0.5s forwards;
+}
+
+.banner h2 {
+    color: #ffffff;
+    font-size: 3rem;
+    font-family: 'Baloo Da 2', serif;
+    font-weight: 200;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+    line-height: 1rem;
+    margin-bottom: 1.5rem;
+    opacity: 0;
+    animation: move_banner 1s 0.5s forwards;
+}
+
+.banner p {
+    font-family: 'Josefin Slab', serif;
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 100;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+    margin-bottom: 1.5rem;
+    opacity: 0;
+    animation: move_banner 1s 0.7s forwards;
+}
+
+.banner button {
+    font-family: 'Mulish', sans-serif;
+    color: whitesmoke;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    background: #7F7FD5;
+    background: -webkit-linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
+    background: linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: move_banner 1s 0.9s forwards;
+}
+
+.banner button:hover {
+    text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .3);
+}
+
+@keyframes move_banner {
+    0% {
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100% {
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
 
 .azul-claro {
     color: #bbd6e5;
