--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -1,138 +1,225 @@
 @import url('fonts.css');
+
+* {
+  list-style: none;
+}
+
+/* Paleta de cores
+#bad7e7
+#f3f3f3
+#283144
+#7e8192
+#e5e5e5
+*/
+
+:root {
+  --font-primary: 'Baloo Da 2', sans-serif;
+  --font-secondary: 'Josefin Slab', sans-serif;
+  --font-action: 'Mulish', sans-serif;
+  --font-baloo: 'Roboto', sans-serif;
+}
+
+.hamburger {
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.show-menu .hamburger{
+  right: 16rem;
+  transition: all 1.1s ;
+}
+
+.line {
+  width: 100%;
+  height: .197rem;
+  background-color: whitesmoke;
+  box-shadow: 0.1rem 0.1rem 5px rgba(0, 0, 0, 0.6);
+  transition: all 1s;
+}
+.show-menu #line1{
+  transform: rotate(45deg) translate(.33rem, .45rem);
+  box-shadow: 0rem 0rem;
+  background-color: #283144;
+}
+.show-menu #line2{
+  opacity: 0;
+  visibility: hidden;
+}
+.show-menu #line3{
+  transform: rotate(-45deg) translate(.3rem, -.45rem);
+  box-shadow: 0rem 0rem;
+  background-color: #283144;
+}
+header {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
 .img-wrapper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: rgba(34, 34, 90, 0.7);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(34, 34, 90, 0.7);
 }
 
 .img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.8;
-    animation: zoom 25s;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+  animation: zoom 25s;
 }
 
 @keyframes zoom {
-    0% {
-        transform: scale(1.3);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
+  0% {
+    transform: scale(1.3);
+  }
 
-header {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
+  100% {
+    transform: scale(1);
+  }
 }
 
 .banner {
-    position: absolute;
-    top: 30%;
-    left: 15%;
+  position: absolute;
+  top: 30%;
+  left: 15%;
 }
 
 .banner h1 {
-    color: #ffffff;
-    font-size: 3.5rem;
-    font-family: 'Baloo Da 2', serif;
-    font-weight: 200;
-    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
-    line-height: 3.5rem;
-    margin-bottom: 1.5rem;
-    opacity: 0;
-    animation: move_banner 1s 0.5s forwards;
+  color: #ffffff;
+  font-size: 3.5rem;
+  font-family: var(--font-primary), serif;
+  font-weight: 200;
+  text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+  line-height: 3.5rem;
+  margin-bottom: 1.5rem;
+  opacity: 0;
+  animation: move_banner 1s 0.5s forwards;
 }
 
 .banner h2 {
-    color: #ffffff;
-    font-size: 3rem;
-    font-family: 'Baloo Da 2', serif;
-    font-weight: 200;
-    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
-    line-height: 1rem;
-    margin-bottom: 1.5rem;
-    opacity: 0;
-    animation: move_banner 1s 0.5s forwards;
+  color: #ffffff;
+  font-size: 3rem;
+  font-family: var(--font-primary), serif;
+  font-weight: 200;
+  text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+  line-height: 1rem;
+  margin-bottom: 1.5rem;
+  opacity: 0;
+  animation: move_banner 1s 0.5s forwards;
 }
 
 .banner p {
-    font-family: 'Josefin Slab', serif;
-    color: #FFF;
-    font-size: 2rem;
-    font-weight: 100;
-    text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
-    margin-bottom: 1.5rem;
-    opacity: 0;
-    animation: move_banner 1s 0.7s forwards;
+  font-family: var(--font-secondary), serif;
+  color: #FFF;
+  font-size: 2rem;
+  font-weight: 100;
+  text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+  margin-bottom: 1.5rem;
+  opacity: 0;
+  animation: move_banner 1s 0.7s forwards;
 }
 
 .banner button {
-    font-family: 'Mulish', sans-serif;
-    color: whitesmoke;
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    background: #7F7FD5;
-    background: -webkit-linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
-    background: linear-gradient(to left, #91EAE4, #86A8E7, #7F7FD5);
-    padding: 1rem 3rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    opacity: 0;
-    animation: move_banner 1s 0.9s forwards;
+  font-family: var(--font-action), sans-serif;
+  color: whitesmoke;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  background: #7F7FD5;
+  background: -webkit-linear-gradient(to left, #bbd6e5, #86A8E7);
+  background: linear-gradient(to left, #bbd6e5, #86A8E7);
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0;
+  animation: move_banner 1s 0.9s forwards;
 }
 
 .banner button:hover {
-    text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .3);
+  text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .3);
 }
 
 @keyframes move_banner {
-    0% {
-        transform: translateY(10rem) rotateY(-30deg);
-    }
-    100% {
-        transform: translateY(0) rotateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(10rem) rotateY(-30deg);
+  }
+
+  100% {
+    transform: translateY(0) rotateY(0);
+    opacity: 1;
+  }
 }
 
-.azul-claro {
-    color: #bbd6e5;
+.sidebar {
+  width: 20rem;
+  height: 100vh;
+  background-color: whitesmoke;
+  position: fixed;
+  top: 0;
+  right: -20rem;
+  transition: all 1s;
 }
 
-.cinza-claro {
-    color: #f3f3f3;
+.show-menu .sidebar{
+  right: 0;
 }
 
-.azul-escuro {
-    color: #1a2130;
+.menu {
+  position: absolute;
+  padding: 0rem;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.cinza-escuro {
-    color: #78797e;
+.menu-item {
+  text-align: center;
+  margin-bottom: .5rem;
 }
 
-.cinza-medio {
-    color: #e5e5e5;
+.menu-link {
+  font-family: var(--font-action);
+  font-size: 2rem;
+  color: #283144;
+  transition: all 0.6s;
+}
+.menu-link:hover {
+  color: #bad7e7;
 }
 
-.roboto {
-    font-family: 'Roboto', sans-serif;
+
+.social-media{
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.mulish {
-    font-family: 'Mulish', sans-serif;
+.social-media i{
+  background-color: #dae7ee ;
+  font-size: 2rem;
+  color:#283144;
+  width: 2.3rem;
+  height: 2.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: color 1s;
+  border-radius: 50%;
 }
-
-.josefin {
-    font-family: 'Josefin Slab', serif;
-}
-
-.baloo {
-    font-family: 'Baloo Da 2', cursive;
+.social-media i:hover{
+  color: #7989ad;
 }
