--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -16,7 +16,7 @@
   --font-primary: 'Baloo Da 2', sans-serif;
   --font-secondary: 'Josefin Slab', sans-serif;
   --font-action: 'Mulish', sans-serif;
-  --font-baloo: 'Roboto', sans-serif;
+  --font-roboto: 'Roboto', sans-serif;
 }
 
 .hamburger {
@@ -69,20 +69,20 @@ header {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: rgba(34, 34, 90, 0.7);
+  background-color: rgba(34, 34, 90, 0.8);
 }
 
 .img-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  opacity: 0.7;
   animation: zoom 25s;
 }
 
 @keyframes zoom {
   0% {
-    transform: scale(1.3);
+    transform: scale(1.4);
   }
 
   100% {
@@ -101,7 +101,7 @@ header {
   font-size: 3.5rem;
   font-family: var(--font-primary), serif;
   font-weight: 200;
-  text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+  text-shadow: .2rem .3rem 3px rgba(0, 0, 0, .3);
   line-height: 3.5rem;
   margin-bottom: 1.5rem;
   opacity: 0;
@@ -113,7 +113,7 @@ header {
   font-size: 3rem;
   font-family: var(--font-primary), serif;
   font-weight: 200;
-  text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+  text-shadow: .2rem .3rem 3px rgba(0, 0, 0, .3);
   line-height: 1rem;
   margin-bottom: 1.5rem;
   opacity: 0;
@@ -125,21 +125,22 @@ header {
   color: #FFF;
   font-size: 2rem;
   font-weight: 100;
-  text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
+  text-shadow: .2rem .25rem 3px rgba(0, 0, 0, .3);
   margin-bottom: 1.5rem;
   opacity: 0;
   animation: move_banner 1s 0.7s forwards;
 }
 
 .banner button {
+  box-shadow: .05rem .05rem 5px rgba(0, 0, 0, .2);
   font-family: var(--font-action), sans-serif;
   color: whitesmoke;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  background: #7F7FD5;
+  background: #86A8E7;
   background: -webkit-linear-gradient(to left, #bbd6e5, #86A8E7);
   background: linear-gradient(to left, #bbd6e5, #86A8E7);
-  padding: 1rem 3rem;
+  padding: 1rem 1.5rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -148,7 +149,7 @@ header {
 }
 
 .banner button:hover {
-  text-shadow: .1rem .1rem 2px rgba(0, 0, 0, .3);
+  box-shadow: .02rem .02rem 3px rgba(0, 0, 0, .2);
 }
 
 @keyframes move_banner {
@@ -165,7 +166,7 @@ header {
 .sidebar {
   width: 20rem;
   height: 100vh;
-  background-color: whitesmoke;
+  background-color: #ffffffde;
   position: fixed;
   top: 0;
   right: -20rem;
@@ -222,4 +223,89 @@ header {
 }
 .social-media i:hover{
   color: #7989ad;
+}
+
+/* Sessão Saiba Mais */
+
+.tecnologias{
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 5.60rem);
+  row-gap: .8rem;
+}
+
+.tecnologia:nth-child(1){
+  grid-column: 4 / 7;
+  grid-row: 1 / 3;
+}
+.tecnologia:nth-child(2){
+  grid-column: 3 / 6;
+  grid-row: 3 / 5;
+}
+.tecnologia:nth-child(3){
+  grid-column: 4 / 7;
+  grid-row: 5 / -1;
+}
+.tecnologia:nth-child(4){
+  grid-column: 11 / 14;
+  grid-row: 1 / 3;
+}
+.tecnologia:nth-child(5){
+  grid-column: 12 / 15;
+  grid-row: 3 / 5;
+}
+.tecnologia:nth-child(6){
+  grid-column: 11 / 14;
+  grid-row: 5 / -1;
+}
+.sessao-tecnologias{
+  background-color: #f3f3f3;
+
+}
+
+.sessao-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sessao-header h1{
+font-family: var(--font-primary);
+font-size: 3rem;
+color: #283144;
+border-bottom: solid 3px #bad7e7;
+margin-bottom: 1.5rem;
+}
+
+.tecnologia-header{
+  display: flex;
+  align-items: center;
+  color: #283144;
+}
+
+.tecnologia-header i{
+  font-size: 2.5rem;
+}
+
+.tecnologia-header h3{
+  font-family: var(--font-secondary);
+  font-size: 2rem;
+  padding-left: 0.8rem;
+  padding-top: 0.75rem;
+}
+
+.tecnologia-text{
+  font-family: var(--font-roboto);
+  margin-top: .3rem;
+}
+
+.tecnologia-img-wrapper{
+  grid-column: 7 / 11;
+  grid-row: 2 / 6;
+  width: 100%;
+}
+
+.tecnologia-img-wrapper img{
+  object-fit: cover;
+  width: 100%;
 }
