--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -67,6 +67,8 @@ html{
   background-color: #283144;
 }
 
+/* PAGINA DE ENTRADA*/ 
+
 header {
   width: 100%;
   height: 100vh;
@@ -109,7 +111,6 @@ header {
   color: #ffffff;
   font-size: 3.5rem;
   font-family: var(--font-primary), serif;
-  font-weight: 200;
   text-shadow: .2rem .3rem 3px rgba(0, 0, 0, .3);
   line-height: 3.5rem;
   margin-bottom: 1.5rem;
@@ -121,7 +122,6 @@ header {
   color: #ffffff;
   font-size: 3rem;
   font-family: var(--font-primary), serif;
-  font-weight: 200;
   text-shadow: .2rem .3rem 3px rgba(0, 0, 0, .3);
   line-height: 1rem;
   margin-bottom: 1.5rem;
@@ -172,6 +172,7 @@ header {
   }
 }
 
+/* MENU */
 .sidebar {
   width: 20rem;
   height: 100vh;
@@ -263,11 +264,11 @@ header {
 
 .sessao-header h1{
 font-family: var(--font-primary);
-font-size: 3rem;
+font-size: 2rem;
 color: #283144;
-border-bottom: solid 3px #bad7e7;
-margin-bottom: 1.5rem;
-padding-top: 1rem;
+border-bottom: solid 1px #bad7e7;
+margin-bottom: 0.5rem;
+padding-top: 0.5rem;
 }
 
 .tecnologia-header{
@@ -277,69 +278,25 @@ padding-top: 1rem;
 }
 
 .tecnologia-header i{
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .tecnologia-header h3{
   font-family: var(--font-secondary);
   font-size: 2rem;
-  padding-left: 0.8rem;
+  padding-left: 0.5rem;
   padding-top: 0.75rem;
 }
 
-.tecnologia-text{
-  font-family: var(--font-roboto);
-  font-size: 1rem;;
-  margin-top: 0.5rem;
-}
-
-.tecnologia-img-wrapper{
-  grid-column: 7 / 11;
-  grid-row: 2 / 6;
-  width: 100%;
-}
-
-.tecnologia-img-wrapper img{
-  object-fit: cover;
-  width: 100%;
-}
-
-footer{
-  width: 100%;
-  height: 6rem;
-  background-color: #283144;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-content{
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-content p{
-  font-family: var(--font-secondary);
-  color: #f3f3f3;
-  font-size: 1.2rem;
-}
-
-.social-list i{
-  color: #f3f3f3;
-  font-size: 1.5rem;
-  padding-left: .5rem;
-}
-
 #link-topo{
-  background-color: #bad7e7b9;
+  background-color: whitesmoke;
   position: fixed;
   right: 2rem;
   bottom: 2rem;
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
   font-size: 1.5rem;
-  color: #0e416bc5;
+  color: #283144;
   display: flex;
   justify-content: center;
   align-items: center;
