--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -20,68 +20,76 @@
   --font-roboto: 'Roboto', sans-serif;
 }
 
- /* Preloader */
- #preloader {
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  background-color:#283144; /* cor do background que vai ocupar o body */
-  z-index:999; /* z-index para jogar para frente e sobrepor tudo */
+/* Preloader */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #283144;
+  /* cor do background que vai ocupar o body */
+  z-index: 999;
+  /* z-index para jogar para frente e sobrepor tudo */
 }
 
 #preloader .inner {
   position: absolute;
-  top: 50%; /* centralizar a parte interna do preload (onde fica a animação)*/
+  top: 50%;
+  /* centralizar a parte interna do preload (onde fica a animação)*/
   left: 50%;
-  transform: translate(-50%, -50%);  
+  transform: translate(-50%, -50%);
 }
 
-.bolas > div {
-display: inline-block;
-background-color: #bad7e7;
-width: 25px;
-height: 25px;
-border-radius: 100%;
-margin: 3px;
--webkit-animation-fill-mode: both;
-animation-fill-mode: both;
-animation-name: animarBola;
-animation-timing-function: linear;
-animation-iteration-count: infinite;
- 
+.bolas>div {
+  display: inline-block;
+  background-color: #bad7e7;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  margin: 3px;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-name: animarBola;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+
 }
 
-.bolas > div:nth-child(1) {
-  animation-duration:0.75s ;
+.bolas>div:nth-child(1) {
+  animation-duration: 0.75s;
   animation-delay: 0;
 }
-.bolas > div:nth-child(2) {
-  animation-duration: 0.75s ;
+
+.bolas>div:nth-child(2) {
+  animation-duration: 0.75s;
   animation-delay: 0.12s;
 }
-.bolas > div:nth-child(3) {
-  animation-duration: 0.75s  ;
+
+.bolas>div:nth-child(3) {
+  animation-duration: 0.75s;
   animation-delay: 0.24s;
 }
 
 @keyframes animarBola {
-0% {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-}
-10% {
-  -webkit-transform: scale(0.1);
-  transform: scale(0.1);
-  opacity: 0.7;
-}
-80%,100% {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1; 
-} 
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  10% {
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+    opacity: 0.7;
+  }
+
+  80%,
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 /* menu */
@@ -98,9 +106,9 @@ animation-iteration-count: infinite;
   cursor: pointer;
 }
 
-.show-menu .hamburger{
+.show-menu .hamburger {
   right: 16rem;
-  transition: all 1.1s ;
+  transition: all 1.1s;
 }
 
 .line {
@@ -112,24 +120,24 @@ animation-iteration-count: infinite;
 
 }
 
-.show-menu #line1{
+.show-menu #line1 {
   transform: rotate(45deg) translate(.33rem, .45rem);
   box-shadow: 0rem 0rem;
   background-color: #283144;
 }
 
-.show-menu #line2{
+.show-menu #line2 {
   opacity: 0;
   visibility: hidden;
 }
 
-.show-menu #line3{
+.show-menu #line3 {
   transform: rotate(-45deg) translate(.3rem, -.45rem);
   box-shadow: 0rem 0rem;
   background-color: #283144;
 }
 
-/* PAGINA DE ENTRADA*/ 
+/* PAGINA DE ENTRADA*/
 
 header {
   width: 100%;
@@ -246,7 +254,7 @@ header {
   z-index: 150;
 }
 
-.show-menu .sidebar{
+.show-menu .sidebar {
   right: 0;
 }
 
@@ -275,19 +283,19 @@ header {
   color: #bad7e7;
 }
 
-.menu-link.login{
+.menu-link.login {
   font-size: 1rem;
   text-transform: uppercase;
   font-family: var(--font-action);
   color: #536ea8;
 }
 
-.login i{
+.login i {
   font-size: 1.5rem;
   color: #536ea8;
 }
 
-.social-media{
+.social-media {
   position: absolute;
   bottom: 2rem;
   width: 100%;
@@ -295,10 +303,10 @@ header {
   justify-content: space-evenly;
 }
 
-.social-media i{
-  background-color: #dae7ee ;
+.social-media i {
+  background-color: #dae7ee;
   font-size: 2rem;
-  color:#283144;
+  color: #283144;
   width: 2.3rem;
   height: 2.3rem;
   display: flex;
@@ -308,49 +316,49 @@ header {
   border-radius: 50%;
 }
 
-.social-media i:hover{
+.social-media i:hover {
   color: #7989ad;
 }
 
 /* Sessão Saiba Mais */
-.tecnologias{
+.tecnologias {
   background-color: #f3f3f3;
 
 }
 
-.main-titulo{
+.main-titulo {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.main-titulo h1{
-font-family: var(--font-primary);
-font-size: 2rem;
-color: #283144;
-border-bottom: solid 2px #bad7e7;
-margin-bottom: 0.5rem;
-padding-top: 0.5rem;
+.main-titulo h1 {
+  font-family: var(--font-primary);
+  font-size: 2rem;
+  color: #283144;
+  border-bottom: solid 2px #bad7e7;
+  margin-bottom: 0.5rem;
+  padding-top: 0.5rem;
 }
 
-.tec-titulo{
+.tec-titulo {
   display: flex;
   align-items: center;
   color: #283144;
 }
 
-.tec-titulo i{
+.tec-titulo i {
   font-size: 2rem;
 }
 
-.tec-titulo h3{
+.tec-titulo h3 {
   font-family: var(--font-secondary);
   font-size: 2rem;
   padding-left: 0.5rem;
   padding-top: 0.75rem;
 }
 
-#link-topo{
+#link-topo {
   background-color: whitesmoke;
   position: fixed;
   right: 2rem;
@@ -367,34 +375,36 @@ padding-top: 0.5rem;
 }
 
 /* Rodapé*/
-footer{
-  padding-top: 1rem; background:#283144;
+footer {
+  padding-top: 1rem;
+  background: #283144;
 }
 
-footer p{
+footer p {
   padding-top: 0.9rem;
   color: #7989ad;
 }
 
 /* TELA DE LOGIN */
-.pag-login{
+.pag-login {
   font-family: var(--font-primary);
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #283144;
   width: 100%;
-  max-width: 230px;
-  padding: 15px;
+  max-width: 250px;
   margin: auto;
+  padding-top: 5rem;
 }
 
-.pag-login i{
+.pag-login i {
   color: #7989ad;
 }
+
 .pag-login .form-floating:focus-within {
   z-index: 2;
 }
 
-.pag-login button{
+.pag-login button {
   box-shadow: .05rem .05rem 5px rgba(0, 0, 0, .2);
   font-family: var(--font-action), sans-serif;
   color: whitesmoke;
@@ -408,6 +418,125 @@ footer p{
   border-radius: 50px;
 }
 
-.form-floating{
+.form-floating {
   color: #283144;
+}
+
+/* Formulário de categoria */
+.pag-temporarias main {
+  background-color: #f3f3f3;
+  min-height: 100vh;
+}
+thead{
+  font-size: 1rem;
+  color: #536ea8;
+  text-align: center;
+}
+
+#tabela-categorias {
+  font-size: 1.4rem;
+  color: #283144;
+}
+
+@media only screen and (max-width: 390px) {
+  #tabela-categorias {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+
+#tabela-contas {
+  font-family: var(--font-primary);
+  font-size: 1.1rem;
+  color: #283144;
+}
+
+@media only screen and (max-width: 1200px) {
+  #tabela-contas {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+@media only screen and (max-width: 990px) {
+  #tabela-contas {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+
+#tabela-lancamentos {
+  font-family: var(--font-primary);
+  font-size: 1.1rem;
+  color: #283144;
+}
+
+@media only screen and (max-width: 1200px) {
+  #tabela-lancamentos {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+@media only screen and (max-width: 990px) {
+  #tabela-lancamentos {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+
+#tabela-usuarios {
+  font-family: var(--font-primary);
+  font-size: 1.1rem;
+  color: #283144;
+}
+
+@media only screen and (max-width: 1200px) {
+  #tabela-usuarios {
+    font-family: var(--font-primary);
+    font-size: 0.8rem;
+    color: #283144;
+  }
+}
+@media only screen and (max-width: 990px) {
+  #tabela-usuarios {
+    font-family: var(--font-primary);
+    font-size: 0.5rem;
+    color: #283144;
+  }
+}
+
+.form-temporario {
+  font-family: var(--font-primary);
+  font-size: 1rem;
+  color: #283144;
+  width: 100%;
+  margin: auto;
+  padding-top: 1rem;
+}
+
+.form-temporario i {
+  color: #7989ad;
+}
+
+.form-temporario button {
+  box-shadow: .05rem .05rem 5px rgba(0, 0, 0, .2);
+  font-family: var(--font-action), sans-serif;
+  color: whitesmoke;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  background: #86A8E7;
+  background: -webkit-linear-gradient(to left, #bbd6e5, #86A8E7);
+  background: linear-gradient(to left, #bbd6e5, #86A8E7);
+  padding: .3rem .5rem;
+  border: none;
+  border-radius: 50px;
+}
+
+/* Tela de Erro*/
+.erro main{
+  height: 85vh;
 }
